Bug 289861 - Does not support "entered text"
Summary: Does not support "entered text"
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Rohan Garg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-26 14:45 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2011-12-26 14:45:49 UTC
Jabber has 3 states
 - no message
 - typing
 - message entered but not currently typing.

We need to check that we support sending the right signals
We need to show the correct state to the user better. We currently treat "message entered but not currently typing as the same as "no message".
Comment 1 David Edmundson 2011-12-26 16:03:12 UTC
Relevant:

Channel_Chat_State — u
Gone (0)
The contact has effectively ceased participating in the chat.
Inactive (1)
The contact has not been active for some time.
Active (2)
The contact is actively participating in the chat.
Paused (3)
The contact has paused composing a message.
Composing (4)
The contact is composing a message to be sent to the chat.

ChatWidget::onChatStatusChanged

we only handle gone and composing.
Presumably because I didn't know how to read telepathy specs at the time of writing.
Comment 2 Rohan Garg 2012-03-20 15:47:25 UTC
Git commit ad431bf4a7a88109f2aeb4218a339236c0acc86b by Rohan Garg.
Committed on 20/03/2012 at 16:42.
Pushed by garg into branch 'master'.

Make the chat window title show a "John Doe has entered text"

When a remote user has entered a text message but has not sent it,
we should display the correct channel state.

REVIEW: 104348

M  +8    -6    app/chat-window.cpp
M  +1    -1    app/chat-window.h
M  +22   -32   lib/chat-widget.cpp
M  +4    -4    lib/chat-widget.h

http://commits.kde.org/telepathy-text-ui/ad431bf4a7a88109f2aeb4218a339236c0acc86b