Make the chat window title show a "John Doe has entered text"

When a remote user has entered a text message but has not sent it,
we should display the correct channel state.

REVIEW: 104348
BUG: 289861